<resources>
    <string name="app_name">Interactive Android Beacon System</string>
    <string name="action_settings">Settings</string>
    <string name="adult_button">ADULT</string>
    <string name="child_button">CHILD</string>
    <string name="teacher_button">TEACHER</string>
    <string name="info_button">INFO</string>
    <string name="select_mode">Choose a mode…</string>
    <string name="content_description_adult">Adult Icon</string>
    <string name="content_description_child">Child Icon</string>
    <string name="content_description_teacher">Teacher Icon</string>
    <string name="content_description_info">Info Icon</string>
    <string name="title_activity_info">INFO</string>
    <string name="title_teacher">TEACHER MODE</string>
    <string name="developers_title">Developers</string>
    <string name="developers_paragraph">Alexandra Wiseman\nDaniel Morgan\nTyler Carr-Braint</string>
    <string name="credits_title">Credits</string>
    <string name="bullet">\u2022</string>
    <string name="credit_teacher_icon">"Teach" Icon made by Freepik from www.flaticon.com is licensed under CC BY 3.0</string>
    <string name="credit_child_icon">"Jumping man" Icon made by Freepik from www.flaticon.com is licensed under CC BY 3.0</string>
    <string name="credit_adult_icon">"Black user shape" Icon made by Freepik from www.flaticon.com is licensed under CC BY 3.0</string>
    <string name="credit_info_icon">"Info sign" Icon made by Daniel Bruce from www.flaticon.com is licensed under CC BY 3.0</string>
    <string name="credit_arrow_icon">"Left arrow angle" Icon made by Freepik from www.flaticon.com is licensed under CC BY 3.0</string>
    <string name="credit_planets_icons">"Earth vector" designed by Freepik</string>
    <string name="title_activity_planet">PlanetActivity</string>
    <string name="submit_activity_planet">Submit</string>
    <string name="clear_activity_planet">Clear</string>
    <string name="instructions_activity_planet">Select the planets in order from the sun.</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_camera_submit">CameraSubmitActivity</string>
    <string name="credit_statue">"Statue of Liberty" designed by Thomas Arhelger via www.freeimages.com</string>
    <string name="camera_instructions">Take a selfie with the statue of liberty.</string>
    <string name="camera_begin">BEGIN</string>
    <string name="camera_submit">SUBMIT</string>
    <string name="camera_redo">REDO</string>
    <string name="camera_take_picture">Take Picture</string>
    <string name="title_activity_game_dev">GameDevActivity</string>
    <string name="child_intro">Find the 3 exhibits. Beat the game at each exhibit to win!</string>
    <string name="a_button">Galaxy Exhibit</string>
    <string name="b_button">Liberty Selfie</string>
    <string name="b_button_adult">Liberty Display</string>
    <string name="c_button">Famous Paintings</string>
    <string name="score">Score: 0</string>
    <string name="title_activity_monitoring">MonitoringActivity</string>
    <string name="title_activity_enter_name">EnterNameActivity</string>
    <string name="entername_intro">Welcome to the Museum. To begin, please enter your name.</string>
    <string name="title_activity_statue_of_liberty">StatueOfLibertyActivity</string>
    <string name="credit_statue_blackwhite">"New york vector skyline" made by Freepik</string>
    <string name="credit_planets">"Sun vector" made by Freepik</string>
    <string name="adult_statue_1">The Statue of Liberty is 305 feet, 6 inches and weighs 450,000 pounds.</string>
    <string name="adult_statue_2">The Statue of Liberty was a gift from France, given to America in 1886.</string>
    <string name="adult_statue_3">Lady Liberty wears a size 879 shoe.</string>
    <string name="adult_planets_1">The coldest planet is Neptune.</string>
    <string name="adult_planets_2">Mercury takes 88 days to circle the sun.</string>
    <string name="adult_planets_3">Venus is the brightest planet.</string>
    <string name="adult_planets_4">Mars is the home of the largest volcano in the solar system.</string>
    <string name="adult_planets_5">One Neptune year lasts 165 Earth years.</string>
    <string name="adult_painting_1">The subject\'s name isn\'t Mona Lisa - it\'s Lisa Gherardini.</string>
    <string name="adult_painting_2">The painting is 30 by 21 inches and weighs just 18 pounds.</string>
    <string name="adult_painting_3">The French emperor, Napoleon, once had Mona Lisa hanging in his bedroom.</string>
    <string name="facts">FACTS:</string>
    <string name="done">DONE</string>
    <string name="title_activity_fact_picker">FactPickerActivity</string>
    <string name="entername_hint">Name</string>
    <string name="factpicker_galaxy">You\'ve reached the Galaxy exhibit. Click the button to learn more about your solar system.</string>
    <string name="factpicker_statue">The World Wonders Exhibit. Click to learn about France\'s largest gift.</string>
    <string name="factpicker_monalisa">The paintings exhibit. Click for info on the famous painting: Mona Lisa.</string>
    <string name="factpicker_galaxy_complete">Hope you learned something new about our solar system. Now move to the next exhibit.</string>
    <string name="factpicker_statue_complete">That\'s it about the statue of liberty. When you\'re ready, find your next exhibit</string>
    <string name="factpicker_monalisa_complete">Isn\'t the Mona Lisa amazing? When you\'re done, move to the next exhibit.</string>
    <string name="factpicker_default">We\'ll let you know when you\'re at an exhibit.</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="teacher_header_name">Name</string>
    <string name="teacher_header_location">Location</string>
    <string name="teacher_header_score">Score</string>
    <string name="gamepicker_galaxy_complete">You are smart! Good work ordering the planets, now go find the next exhibit.</string>
    <string name="gamepicker_galaxy">This is the Galaxy Exhibit! In this game you must order the planets in our solar system. Ready?</string>
    <string name="gamepicker_statue_complete">Nice Selfie! Now get to your next exhibit!</string>
    <string name="gamepicker_statue">The World Wonders Exhibit. Take a picture of yourself with the statue of liberty. Ready?</string>
    <string name="gamepicker_monalisa_complete">Great work. You collected a lot of paintings! Now move to the next exhibit!</string>
    <string name="gamepicker_monalisa">Wow look at the famous paintings! In this game tilt the phone to catch as many paintings as you can in the time limit. Ready?</string>
    <string name="gamepicker_default">We\'ll let you know when you\'re at an exhibit.</string>
    <string name="planetbuttontext">Play Planet Game</string>
    <string name="statuebuttontext">Play Liberty Statue Game</string>
    <string name="paintingbuttontext">Play Catch Game</string>
    <string name="factstatuetext">Enter Liberty Exhibit</string>
    <string name="factplanettext">Enter Planet Exhibit</string>
    <string name="factpaintingstext">Enter Famous Paintings Exhibit</string>

</resources>
