<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/main_menu_background"
              android:orientation="vertical"
              android:paddingBottom="0dp"
              android:paddingLeft="30dp"
              android:paddingRight="30dp"
              android:paddingTop="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:paddingTop="35dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/select_mode"
            android:textColor="#ffffff"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="10dp"
            android:paddingLeft="0dp">

            <ImageButton
                android:id="@+id/adultButton"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/main_menu_adult_button"
                android:contentDescription="@string/content_description_adult"
                android:gravity="center_horizontal|center_vertical"
                android:src="@drawable/adult_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/adult_button"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="0dp">

            <ImageButton
                android:id="@+id/childButton"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/main_menu_child_button"
                android:contentDescription="@string/content_description_child"
                android:gravity="center_horizontal|center_vertical"
                android:src="@drawable/kid_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/child_button"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="50dp"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="10dp"
            android:paddingLeft="0dp">

            <ImageButton
                android:id="@+id/teacherButton"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/main_menu_teacher_button"
                android:contentDescription="@string/content_description_teacher"
                android:gravity="center_horizontal|center_vertical"
                android:src="@drawable/teacher_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/teacher_button"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="0dp">

            <ImageButton
                android:id="@+id/infoButton"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/main_menu_info_button"
                android:contentDescription="@string/content_description_info"
                android:gravity="center_horizontal|center_vertical"
                android:src="@drawable/info_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/info_button"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>