<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_menu_background"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="0dp"
    android:id="@+id/gamepickerlayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:paddingTop="35dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/child_intro"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:paddingTop="35dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="beacon status"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold"
            android:id="@+id/regiontext" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/tableforgamebutton">

        <TableRow>
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TableRow>




    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingRight="0dp"
            android:paddingLeft="0dp">

            <ImageButton
                android:id="@+id/aButton"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/main_menu_adult_button"
                android:contentDescription="@string/a_button"
                android:gravity="center_horizontal|center_vertical"
                android:src="@drawable/a_icon"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/a_button"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="0dp">

            <ImageButton
                android:id="@+id/bButton"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/main_menu_child_button"
                android:contentDescription="@string/b_button"
                android:gravity="center_horizontal|center_vertical"
                android:src="@drawable/b_icon"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/b_button"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"
                android:id="@+id/tableforbutton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="0dp">

            <ImageButton
                android:id="@+id/teacherButton"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@drawable/main_menu_teacher_button"
                android:contentDescription="@string/c_button"
                android:gravity="center_horizontal|center_vertical"
                android:src="@drawable/c_icon"/>

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="10dp"
                android:text="@string/c_button"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>



    </LinearLayout>
</LinearLayout>